# stageflow

./: .gitignore  CLI_REFERENCE.md  LIBRARY_REFERENCE.md  PROCESS_DESIGN_GUIDE.md  PROCESS_SCHEMA_REFERENCE.md  QUICKSTART.md  README.md  element.json  install.sh  main.py  pipeline.yaml  pyproject.toml  run_examples.sh  sample_process.yaml  task_status.yaml  test_filter_segment.py  test_install.sh  test_manual_env.yaml  test_new_lock.py  uninstall.sh
examples/: run_all_examples.sh  strlen_functions_demo.yaml  strlen_test_element.json  strlen_test_element_fail.json
examples/advanced/content_moderation/: process.yaml
examples/advanced/loan_application/: process.yaml
examples/advanced/software_deployment/: process.yaml
examples/case1_process_creation/consistency_errors/: circular_dependencies.yaml  conflicting_gates.yaml  final_stage_has_gates.yaml  infinite_cycle.yaml  invalid_locks.yaml  invalid_transition.yaml  missing_targets.yaml  multiple_gates_same_target.yaml  self_referencing_gate.yaml
examples/case1_process_creation/invalid_structure/: invalid_locks.yaml  invalid_references.yaml
examples/case1_process_creation/valid_processes/: all_lock_types.yaml  complex_multistage.yaml  controlled_cycle_advanced.yaml  controlled_cycle_simple.yaml  multiple_gates.yaml  simple_2stage.yaml
examples/case2_element_validation/default_properties/: defaults_demo_process.yaml  preferences_needs_advanced_defaults.json  process.yaml  profile_partial_preferences.json  ready_for_activation.json  user_needs_defaults.json
examples/case2_element_validation/edge_cases/: empty_element.json  nested_properties.json  process.yaml  special_chars.json
examples/case2_element_validation/normal_flow/: process.yaml
examples/case2_element_validation/regression/: process.yaml
examples/case3_visualization/complex/: convergence_flow.yaml  nested_conditions.yaml  parallel_paths.yaml
examples/case3_visualization/formats/: process.yaml
examples/case3_visualization/simple/: branching_flow.yaml  linear_flow.yaml
examples/case4_manager_testing/cli_examples/: advanced_workflows.sh  basic_operations.sh  default_schema_test.sh  new_features_test.sh  simple_test.sh
examples/case4_manager_testing/configuration/: basic_config.py  environment_config.py
examples/case4_manager_testing/sample_processes/: complex_pipeline.yaml  document_approval.yaml  ecommerce_order.yaml  simple_workflow.yaml  user_onboarding.yaml
examples/case5_complex_data_structures/: test_schema_generation.sh
examples/controlled_cycles/: example_controlled_cycle_advanced.yaml  example_controlled_cycle_simple.yaml  example_element_attempt1.json  example_element_attempt2.json  example_element_attempt3_success.json  example_element_revision1.json  example_element_revision2.json  example_element_revision3_approved.json
examples/documentation/: well_documented_process.yaml
examples/stage_extraction/: element_processing.json  element_start.json  simple_workflow.yaml  user_profile_setup.json  user_registration.json  user_verification.json  user_workflow.yaml
examples/templates/: basic.yaml
extra/: perf.py
stageflow/: __init__.py  common.py  element.py  gate.py  lock.py  models.py  process.py  stage.py
stageflow/analysis/: __init__.py  analyzer.py  gate.py  graph.py  stage.py
stageflow/cli/: __init__.py  main.py  utils.py
stageflow/common/: __init__.py  exceptions.py  interfaces.py  types.py
stageflow/core/: __init__.py  element.py  gate.py  lock.py  process.py  result.py  schema.py  stage.py
stageflow/elements/: __init__.py  element.py  schema.py
stageflow/examples/: __init__.py
stageflow/extensions/: __init__.py  registry.py  resolvers.py  snapshots.py
stageflow/gates/: __init__.py  config.py  gate.py  lock.py  registry.py
stageflow/loader/: __init__.py  consistency_checker.py  loader.py  validators.py
stageflow/loaders/: __init__.py  json_loader.py  yaml_loader.py
stageflow/manager/: __init__.py  config.py  constants.py  editor.py  manager.py  registry.py  utils.py
stageflow/models/: __init__.py  analysis.py  base.py  consistency.py  enums.py  errors.py  properties.py  schema.py
stageflow/process/: __init__.py  config.py  main.py  result.py  submodules.py
stageflow/schema/: __init__.py  loader.py  validation.py
stageflow/templates/: __init__.py  approval.yaml  basic.yaml  onboarding.yaml
stageflow/validation/: __init__.py  linter.py  regression.py
stageflow/visualization/: __init__.py  documentation.py  graphviz.py  mermaid.py
tests/: __init__.py  conftest.py
tests/cli/: test_evaluate_command.py  test_init_command.py  test_validate_command.py  test_visualize_command.py
tests/examples/: test_intermediate_examples.py  test_simple_examples.py
tests/fixtures/: __init__.py  core_models.py  mock_objects.py  parameters.py  process_schemas.py  sample_data.py
tests/integration/: __init__.py  test_cli_visualize.py  test_examples_validation.py  test_loader_integration.py  test_or_logic_schema_loading.py  test_schema_integration.py  test_templates_integration.py  test_use_cases.py  test_visualization_regression.py
tests/property/: __init__.py  conftest.py  generators.py  test_element_properties.py  test_gate_properties.py  test_lock_properties.py
tests/unit/: __init__.py  test_action_definitions.py  test_conditional_lock.py  test_custom_error_messages.py  test_element.py  test_element_length_functions.py  test_enhanced_expected_actions.py  test_gate.py  test_graphviz_generator.py  test_json_loader.py  test_loader_integration.py  test_loader_practical_usage.py  test_lock.py  test_lock_factory.py  test_lock_result_nested.py  test_mermaid_generator.py  test_new_enums.py  test_or_logic_lock.py  test_process.py  test_process_7state.py  test_process_stage_extraction.py  test_process_stage_extraction_simple.py  test_regression_checking.py  test_result.py  test_result_enhanced.py  test_schema.py  test_schema_validation.py  test_schema_validator.py  test_stage.py  test_stage_evaluation_result.py  test_stage_templates.py  test_stageflow_init.py  test_suggested_actions.py  test_yaml_loader.py
(+209 files in other folders)
